start statements at new line